--- a/DotNetKit.Wpf.AutoCompleteComboBox.Demo/DotNetKit.Wpf.AutoCompleteComboBox.Demo.csproj
+++ b/DotNetKit.Wpf.AutoCompleteComboBox.Demo/DotNetKit.Wpf.AutoCompleteComboBox.Demo.csproj
@@ -62,6 +62,7 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Data\Person.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
