--- a/DotNetKit.Wpf.AutoCompleteComboBox.Demo/DotNetKit.Wpf.AutoCompleteComboBox.Demo.csproj
+++ b/DotNetKit.Wpf.AutoCompleteComboBox.Demo/DotNetKit.Wpf.AutoCompleteComboBox.Demo.csproj
@@ -54,6 +54,10 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Samples\PracticalSample\PracticalSampleControl.xaml.cs">
+      <DependentUpon>PracticalSampleControl.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Samples\PracticalSample\PracticalSample.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -67,6 +71,10 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="Samples\PracticalSample\PracticalSampleControl.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs">
