--- a/DotNetKit.Wpf.AutoCompleteComboBox/DotNetKit.Wpf.AutoCompleteComboBox.csproj
+++ b/DotNetKit.Wpf.AutoCompleteComboBox/DotNetKit.Wpf.AutoCompleteComboBox.csproj
@@ -5,7 +5,7 @@
     <UseWPF>true</UseWPF>
     <RootNamespace>DotNetKit</RootNamespace>
     <Description>Provides a lightweight combobox with filtering (auto-complete).</Description>
-    <Copyright>Copyright © 2020</Copyright>
+    <Copyright>Copyright (c) 2017 vain0</Copyright>
     <Version>1.3.0</Version>
     <Authors>vain0</Authors>
     <projectUrl>https://github.com/DotNetKit/DotNetKit.Wpf.AutoCompleteComboBox</projectUrl>
