--- a/DotNetKit.Wpf.AutoCompleteComboBox.Demo/DotNetKit.Wpf.AutoCompleteComboBox.Demo.csproj
+++ b/DotNetKit.Wpf.AutoCompleteComboBox.Demo/DotNetKit.Wpf.AutoCompleteComboBox.Demo.csproj
@@ -2,7 +2,7 @@
 <Project Sdk="Microsoft.NET.Sdk.WindowsDesktop">
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
-    <TargetFrameworks>net45;netcoreapp3.1</TargetFrameworks>
+    <TargetFrameworks>net462;net6-windows</TargetFrameworks>
     <UseWPF>true</UseWPF>
     <RootNamespace>DotNetKit.Demo</RootNamespace>
     <Copyright>Copyright © 2020</Copyright>
