--- a/AutoCompleteComboBoxWpf/AutoCompleteComboBoxWpf.csproj
+++ b/AutoCompleteComboBoxWpf/AutoCompleteComboBoxWpf.csproj
@@ -1,14 +1,14 @@
-<?xml version="1.0" encoding="utf-8"?>
-<Project Sdk="Microsoft.NET.Sdk.WindowsDesktop">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFrameworks>net462;net8-windows</TargetFrameworks>
     <UseWPF>true</UseWPF>
     <RootNamespace>DotNetKit</RootNamespace>
+    <AssemblyName>DotNetKit.Wpf.AutoCompleteComboBox</AssemblyName>
     <Description>Provides a lightweight combobox with filtering (auto-complete).</Description>
     <Copyright>Copyright (c) 2017 vain0</Copyright>
-    <Version>1.6.0</Version>
+    <Version>2.0.0-dev</Version>
     <Authors>vain0</Authors>
-    <projectUrl>https://github.com/DotNetKit/DotNetKit.Wpf.AutoCompleteComboBox</projectUrl>
+    <projectUrl>https://github.com/vain0x/DotNetKit.Wpf.AutoCompleteComboBox</projectUrl>
     <licenseUrl>http://opensource.org/licenses/MIT</licenseUrl>
     <PackageTags>Wpf Combobox AutoComplete</PackageTags>
     <PackageProjectUrl>https://github.com/vain0x/DotNetKit.Wpf.AutoCompleteComboBox</PackageProjectUrl>
